--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pygments = "^2.16.1"
 mkdocs-material = "^9.4.6"
 pymdown-extensions = "^10.3.1"
 pylint = "^3.0.2"
+mkdocstrings = "^0.23.0"
 
 [build-system]
 requires = ["poetry-core"]
